Fixed thumbnail overlapping stickers/etc.

--- a/client/styles/components/_thumbnail.scss
+++ b/client/styles/components/_thumbnail.scss
@@ -1,5 +1,7 @@
 .thumbnailContainer {
-  position: relative;
+  .material-icons {
+    color: $text-color;
+  }
 
   .play {
     display: flex;
